# Seedream_MCP

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  RELEASE.md  config.env.example  docker-compose.yml  pyproject.toml  setup.py
.github/workflows/: release.yml
examples/: basic_client_usage.py
seedream_mcp/: config.py  server.py
seedream_mcp/utils/: auto_save.py
tests/: test_mcp_integration.py
